# ImageClassifier

./: .gitignore  CMakeLists.txt
ImageClassifier/: CMakeLists.txt
ImageClassifier/Header/: CNN.hpp  ImageProcess.hpp
ImageClassifier/Source/: CNN.cpp  ImageProcess.cpp  main.cpp
bash/: build.bat  configure.bat  run.bat
